se agrego un z-index a haader para resolver conflicto con el carousel, proxima tarea, revisar prioridades de z-index

--- a/styles/styles_menu.css
+++ b/styles/styles_menu.css
@@ -2,6 +2,7 @@
   background-color: var(--acento);
   position: sticky;
   top: 0;
+  z-index: 10;
 
   .nav {
     width: 100dvw;
